k8s/maps-front/deployment_front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: maps-front
  name: maps-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maps-front
  template:
    metadata:
      labels:
        app: maps-front
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/maps7/maps-front:latest
          imagePullPolicy: Always
          name: maps-front
          ports:
            - containerPort: 8080
              protocol: TCP
