k8s/maps-front/service_front.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: maps-front
  name: maps-front
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: maps-front
