k8s/maps-front/route_front_webhook.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: maps-front
  name: el-maps-front
spec:
  path: "/"
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: el-maps-front
